-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.12.5
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>
This issue relates to the following test suite run:
https://testing.whamcloud.com/test_sets/2c10b9da-44b8-11ea-bffa-52540065bddc
test_129 failed with the following error:
current dir size 4096, previous limit 20480
It looks like this started on 2020-01-28 when a number of patches landed.
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_129 - current dir size 4096, previous limit 20480
sanity test_129 - dirsize 4096 < 32768 after 93 files